--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -2,13 +2,18 @@
   display: flex;
 
   justify-content: space-between;
-  align-items: flex-start;
-  /* padding: 2rem 2rem; */
   margin: 2rem 2rem;
-  color: white;
 }
 
 .logo {
   font-weight: 700;
   font-size: 30px;
+  color: white;
+}
+
+.navbar a {
+  font-weight: 500;
+  font-size: 18px;
+  text-decoration: none;
+  color: white;
 }
