improved layout changed colors and styles

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   flex-direction: column;
   padding: 4rem 6rem;
-  margin: 4rem 6rem;
+  /* margin: 4rem 0rem; */
   color: white;
 }
 
