--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,19 @@
 * {
-  background: #365668;
+  /* background: #365668; */
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+.hero-section,
+.footer-section {
+  background-image: url(./assets/5172658.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+}
+
+.about-section {
+  background-color: #e02882;
 }
