Added tech icons and project images

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@
 }
 
 .about-section {
-  background-color: #e02882;
+  /* background-color: #e02882; */
+  background-color: #701040;
 }
 
 .footer-section {
