--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -9,6 +9,12 @@
   margin: 0rem 5rem;
 }
 
+.navbar-links {
+  display: flex;
+
+  justify-content: flex-end;
+}
+
 .logo {
   font-weight: 700;
   font-size: 30px;
@@ -20,4 +26,5 @@
   font-size: 18px;
   text-decoration: none;
   color: white;
+  margin-left: 1rem;
 }
