--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -1,9 +1,9 @@
 .project-section {
   display: flex;
 
-  justify-content: space-between;
+  justify-content: center;
   flex-direction: column;
-  padding: 4rem 6rem;
+  padding: 0rem 6rem;
   margin: 4rem 6rem;
   color: black;
 }
@@ -19,4 +19,19 @@
 .project-section h3 {
   font-size: 2rem;
   margin-bottom: 0.4rem;
+}
+
+.project {
+  display: flex;
+  flex-direction: column;
+}
+
+.project-content {
+  flex: 1;
+  flex-direction: column;
+}
+
+img {
+  width: 350px;
+  height: 200px;
 }
