--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
   margin: 0;
 }
 
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+}
+
 .hero-section {
   background-image: url(./assets/5172658.jpg);
   background-position: center;
