--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -30,3 +30,13 @@
   justify-content: center;
   filter: brightness(0) invert(1);
 }
+
+@media screen and (max-width: 480px) {
+  .contact-section h2 {
+    font-size: 2rem;
+  }
+
+  .contact-section p {
+    font-size: 15px;
+  }
+}
