--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -28,3 +28,13 @@
   color: white;
   margin-left: 1rem;
 }
+
+@media screen and (max-width: 480px) {
+  .logo {
+    font-size: 20px;
+  }
+
+  .navbar a {
+    font-size: 10px;
+  }
+}
