updated media query to target max-width 644px

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -57,7 +57,10 @@
   margin: 0rem 1rem;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 644px) {
+  .about-section {
+    padding: 0rem 1rem;
+  }
   .about-section h2 {
     font-size: 2rem;
   }
