--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -14,8 +14,6 @@
   gap: 4rem;
   padding: 4rem 6rem;
   margin: 4rem auto;
-
-  /* border: 5px solid red; */
 }
 
 .header-font {
@@ -28,7 +26,7 @@
 
 .header-font p {
   font-family: "Roboto", sans-serif;
-  line-height: 0;
+  line-height: 1.25;
   font-size: 18px;
   overflow-wrap: break-word;
 }
@@ -38,7 +36,7 @@
   height: 390.06px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 644px) {
   .header-section {
     display: flex;
     flex-direction: column;
@@ -47,15 +45,12 @@
   .header-font h1 {
     font-size: 2.5rem;
   }
-
   .header-font p {
-    font-family: "Roboto", sans-serif;
-    line-height: 0;
-    font-size: 10px;
+    font-size: 15px;
   }
 
   .header-image {
-    width: 250px;
-    height: 250.06px;
+    width: 100%;
+    height: auto;
   }
 }
