--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -14,6 +14,7 @@
   justify-items: center;
   align-items: center;
   margin: 4rem auto;
+  padding: 0rem 4rem;
   /* border: 5px solid red; */
   max-width: 95rem;
 }
@@ -97,7 +98,7 @@
   font-weight: bold;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 644px) {
   .project-section {
     display: flex;
     flex-direction: column;
