--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -74,3 +74,14 @@
     width: 30px;
   }
 }
+
+@media screen and (min-width: 645px) and (max-width: 750px) {
+  .about-section h2 {
+    font-size: 2.5rem;
+  }
+
+  .tech-icon {
+    height: 40px;
+    width: 40px;
+  }
+}
