--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -54,3 +54,23 @@
     height: auto;
   }
 }
+
+@media screen and (min-width: 645px) and (max-width: 750px) {
+  .header-section {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .header-font h1 {
+    font-size: 3rem;
+  }
+  .header-font p {
+    font-size: 18px;
+  }
+
+  .header-image {
+    margin-left: 5rem;
+    width: 65%;
+    height: auto;
+  }
+}
