--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -74,3 +74,10 @@
     height: auto;
   }
 }
+
+@media screen and (min-width: 751px) and (max-width: 1024px) {
+  .header-image {
+    width: 65%;
+    height: auto;
+  }
+}
