--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -26,8 +26,8 @@
 }
 
 .about-section p {
-  font-family: "Roboto", sans-serif;
-  font-size: 18px;
+  font-size: 16px;
+  font-weight: 300;
   line-height: 1.25;
 }
 
