--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -16,8 +16,8 @@
 }
 
 .contact-section p {
-  font-family: "Roboto", sans-serif;
-  font-size: 18px;
+  font-size: 16px;
+  font-weight: 300;
   display: flex;
   justify-content: center;
 }
