changed menu margin on small screens

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -30,6 +30,10 @@
 }
 
 @media screen and (max-width: 644px) {
+  .navbar-menu {
+    margin: 0rem 1rem;
+  }
+
   .logo {
     font-size: 20px;
   }
