--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,9 @@
 }
 
 .App {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center; */
   margin: 0 auto;
 }
 
