--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,12 +1,14 @@
 .navbar {
   padding-top: 1rem;
+  margin: 0 auto;
 }
 
 .navbar-menu {
   display: flex;
 
-  justify-content: space-between;
-  margin: 0rem 5rem;
+  /* justify-content: space-between; */
+  justify-content: space-evenly;
+  /* margin: 0rem 5rem; */
 }
 
 .navbar-links {
@@ -21,24 +23,38 @@
   color: white;
 }
 
-.navbar a {
-  font-weight: 500;
+.navbar a:link {
+  font-weight: 400;
   font-size: 18px;
   text-decoration: none;
   color: white;
   margin-left: 1rem;
 }
 
+.navbar a:visited {
+  color: white;
+}
+
+.navbar a:hover {
+  color: #701040;
+}
+
+.navbar a:active {
+  color: #701040;
+}
+
 @media screen and (max-width: 644px) {
   .navbar-menu {
-    margin: 0rem 1rem;
+    margin: 1rem auto;
+    flex-direction: column;
+    align-items: center;
   }
 
   .logo {
     font-size: 20px;
   }
 
-  .navbar a {
-    font-size: 10px;
+  .navbar a:link {
+    font-size: 12px;
   }
 }
