--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -1,20 +1,25 @@
 .project-container {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-items: center;
-  align-items: center;
+  align-items: center; */
   margin: 0rem auto;
   color: black;
 }
 
 .project-section {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-items: center;
-  align-items: center;
-  margin: 4rem auto;
-  padding: 0rem 4rem;
-  max-width: 95rem;
+  align-items: center; */
+  margin: 0 auto;
+  padding: 2rem 4rem;
+  max-width: 65%;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  /* align-content: center;
+  justify-content: center; */
 }
 
 .project-section h2 {
@@ -22,6 +27,7 @@
   margin-bottom: 0.4rem;
 
   text-align: center;
+  grid-column: 1/ -1;
 }
 
 .project-section img {
@@ -34,46 +40,59 @@
 }
 
 .project-section p {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 300;
 }
 
 .project-one {
   display: flex;
-  float: left;
+  grid-column: 1/-1;
+  flex-direction: row-reverse;
+  /* display: flex;
+  float: left; */
   gap: 2rem;
-  margin: 2rem 0rem;
+  /* margin: 2rem 0rem; */
+  padding: 2rem 0rem;
 }
-.project-one__content {
-  display: flex;
+
+/* .project-one__content {
+  /* display: flex;
   flex-direction: column;
   float: right;
-}
+} */
 
 .project-two {
   display: flex;
-  flex-direction: row-reverse;
+  grid-column: 1/-1;
+  /* display: flex;
+  flex-direction: row-reverse; */
   gap: 2rem;
+  padding: 2rem 0rem;
 }
 
-.project-two__content {
-  display: flex;
+/* .project-two__content {
+ display: flex;
   flex-direction: column;
-  float: right;
-}
+  float: right; 
+}*/
 
 .project-three {
   display: flex;
+  grid-column: 1/ 3;
+  gap: 2rem;
+  flex-direction: row-reverse;
+  /* display: flex;
   float: left;
   gap: 2rem;
-  margin: 2rem 0rem;
+  margin: 2rem 0rem; */
+  padding: 2rem 0rem;
 }
 
-.project-three__content {
-  display: flex;
+/* .project-three__content {
+  /* display: flex;
   flex-direction: column;
-  float: right;
-}
+  float: right; 
+} */
 
 .project-buttons {
   margin-top: 1rem;
@@ -84,8 +103,8 @@
 
   padding: 0.5rem;
   border: none;
-  /* background: #701040; */
-  background: #8d4066;
+  /* background: #8d4066; */
+  background: #701040;
   color: white;
   font-weight: bold;
 }
@@ -98,14 +117,13 @@
 .github-link {
   padding: 0.5rem;
   border: none;
-  /* background: #030836; */
-  background: #4f5272;
+  /* background: #4f5272; */
+  background: #030836;
   color: white;
   font-weight: bold;
 }
 
 .github-link:hover {
-  /* background: #1e2ba7; */
   background: #9a9caf;
 }
 
@@ -116,6 +134,7 @@
     justify-items: center;
     align-items: center;
     padding: 0rem 3rem;
+    max-width: 90%;
   }
 
   .project-one {
@@ -172,6 +191,7 @@
     justify-items: center;
     align-items: center;
     padding: 0rem 3rem;
+    max-width: 90%;
   }
 
   .project-one {
